Fix z-indexes for popup state

--- a/src/structure.css
+++ b/src/structure.css
@@ -97,7 +97,7 @@ body,
 	top: 20px;
 	transition: .35s;
 	width: 450px;
-	z-index: 1000000;
+	z-index: 100000;
 }
 #map .caption > button.prev,
 #map .caption > button.next {
